--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-   "name":"APPNAME",
-   "description":"Nothing here yet",
+   "name":"eventrouter",
+   "description":"Routing and filtering for EventEmitter",
    "version":"0.0.1",
-   "homepage":"http://github.com/wearefractal/APPNAME",
-   "repository":"git://github.com/wearefractal/APPNAME.git",
+   "homepage":"http://github.com/wearefractal/EventRouter",
+   "repository":"git://github.com/wearefractal/EventRouter.git",
    "author":"Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
-   "main":"./lib/main.coffee",
+   "main":"./lib/EventRouter.coffee",
    
    "dependencies":{
-      "coffee-script":"*",
-      "node-log":"*",
-      "protege":"*"
+      "coffee-script":"*"
    },
    "engines":{
       "node":">= 0.4.0"
@@ -18,7 +16,7 @@
    "licenses":[
       {
          "type":"MIT",
-         "url":"http://github.com/wearefractal/APPNAME/raw/master/LICENSE"
+         "url":"http://github.com/wearefractal/EventRouter/raw/master/LICENSE"
       }
    ]
 }
